2005-03-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* EnvironmentCas.cs: Fixed failures under MS for NET_1_1.
	* ExceptionCas.cs: Fixed failures under MS for NET_1_1.

2005-03-09  Zoltan Varga  <vargaz@freemail.hu>

	* TypeTest.cs: Add tests for bug #73432.

2005-03-04  Zoltan Varga  <vargaz@freemail.hu>

	* StringTest.cs: Add some unsafe ctor tests.

2005-02-19  Ben Maurer  <bmaurer@ximian.com>

	* RandomTest.cs (NextDouble): Disable. See comment.

2005-02-14  Zoltan Varga  <vargaz@freemail.hu>

	* TypeTest.cs: Add tests for byref types.

2005-02-12  Ben Maurer  <bmaurer@ximian.com>

	* *: Fix up tests on 2.0 by explicitly boxing.

2005-02-11  Nick Drochak  <ndrochak@ieee.org>

	* NumberFormatterTest.cs:
	* DecimalTest.cs: 
	* DecimalTest2.cs: Put NotWorking on some tests.

2005-02-01  Atsushi Enomoto  <atsushi@ximian.com>

	* NumberFormatterTest.cs : override SetUp().

2005-01-31  Nick Drochak  <ndrochak@ieee.org>

	* StringTest.cs: Some NotWorking tests fail on .NET too.  Fix the tests
	and then try on mono.

2005-01-30  Nick Drochak  <ndrochak@ieee.org>

	* StringTest.cs: Surgically remove some failing tests.

2005-01-29  Zoltan Varga  <vargaz@freemail.hu>

	* EnvironmentTest.cs: Reenable command line args test.

2005-01-28  Sebastien Pouliot  <sebastien@ximian.com>  
 
	* EnvironmentTest.cs: Added a new unit for GetCommandLineArgs to track
	bug #71938.

2005-01-28  Sebastien Pouliot  <sebastien@ximian.com> 

	* EnvironmentCas.cs: New. Permission tests for Environment.
	* ExceptionCas.cs: New. Permission tests for Exception.

2005-01-27  Nick Drochak  <ndrochak@ieee.org>

	* UInt64Test.cs: Identify tests better

2005-01-24  Sebastien Pouliot  <sebastien@ximian.com> 

	* EnvironmentTest.cs: Updated to NUnit 2.2 syntax. Added some tests
	(mostly for NET_2_0).

2005-01-19  Rafael Teixeira  <rafaelteixeirabr@hotmail.com>
	* TypeTest.cs: Added tests for the Type.FilterNameIgnoreCase and 
	Type.FilterName delegates (more precisely the implementations behind)
	